--- a/pag-desafio-He4rtLabs/He4rtLabs.html
+++ b/pag-desafio-He4rtLabs/He4rtLabs.html
@@ -7,11 +7,17 @@
     <title>Calculadora de Hora para Freelas</title>
     <link rel="stylesheet" href="He4rtLabs.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/global.css">
 </head>
 
 <body>
     <header>
         <h1>Calculadora de Hora para Freelas</h1>
+        <nav class="nav-links">
+            <a href="../pag-calculadora-free/calculadora-free.html">Calculadora</a>
+            <a href="../pag-agenda/calendario.html">Agenda</a>
+            <a href="../pag-desafio-He4rtLabs/He4rtLabs.html">Desafio He4rtLabs</a>
+        </nav>
     </header>
 
     <main>
@@ -39,7 +45,8 @@
                 </div>
                 <div class="factor">
                     <h3>🦋 Esse foi o desafio da He4rtLabs</h3>
-                    <p>Ir para minha versão <a href="../pag-calculadora-free/calculadora-free.html">calculadora-free</a></p>
+                    <p>Ir para minha versão <a href="../pag-calculadora-free/calculadora-free.html">calculadora-free</a>
+                    </p>
                 </div>
             </div>
         </section>
@@ -70,7 +77,7 @@
 
                 <button type="submit">Calcular</button>
             </form>
-            
+
 
             <div id="result-container" class="hidden">
                 <h3>Resultado</h3>
@@ -82,7 +89,7 @@
     </main>
 
     <footer>
-        <p>Desafio #001 do He4rtLabs - Feito com ❤️ por Sophia </p>
+        <p>&copy; 2025 - Criado por Soph ♥</p>
     </footer>
 
     <script src="He4rtLabs.js"></script>
