chore: caminhos no html para nova estrutura

--- a/pags/calculadora/calculadora.html
+++ b/pags/calculadora/calculadora.html
@@ -7,17 +7,17 @@
     <title>Calculadora de Valor Hora - He4rtLabs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="calculadora-free.css">
-    <link rel="stylesheet" href="../assets/global.css">
+    <link rel="stylesheet" href="calculadora.css">
+    <link rel="stylesheet" href="../../assets/global.css">
 </head>
 
 <body>
     <header>
         <h1>Calculadora de Hora para Freelas</h1>
         <nav class="nav-links">
-            <a href="../pag-calculadora-free/calculadora-free.html">Calculadora</a>
-            <a href="../pag-agenda/calendario.html">Agenda</a>
-            <a href="../pag-desafio-He4rtLabs/He4rtLabs.html">Desafio He4rtLabs</a>
+            <a href="../../pags/calculadora/calculadora.html">Calculadora</a>
+            <a href="../../pags/heart/heart.html">Desafio He4rtLabs</a>
+            <a href="../../pags/agenda/agenda.html">Agenda(em manutenção!)</a>
         </nav>
     </header>
 
@@ -201,7 +201,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="calculadora-free.js"></script>
+    <script src="calculadora.js"></script>
 </body>
 
 </html>
