--- a/pags/heart/heart.html
+++ b/pags/heart/heart.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Hora para Freelas</title>
-    <link rel="stylesheet" href="He4rtLabs.css">
+    <link rel="stylesheet" href="heart.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/global.css">
+    <link rel="stylesheet" href="../../assets/global.css">
 </head>
 
 <body>
     <header>
         <h1>Calculadora de Hora para Freelas</h1>
         <nav class="nav-links">
-            <a href="../pag-calculadora-free/calculadora-free.html">Calculadora</a>
-            <a href="../pag-agenda/calendario.html">Agenda</a>
-            <a href="../pag-desafio-He4rtLabs/He4rtLabs.html">Desafio He4rtLabs</a>
+            <a href="../../pags/calculadora/calculadora.html">Calculadora</a>
+            <a href="../../pags/heart/heart.html">Desafio He4rtLabs</a>
+            <a href="../../pags/agenda/agenda.html">Agenda(em manutenção!)</a>
         </nav>
     </header>
 
@@ -92,7 +92,7 @@
         <p>&copy; 2025 - Criado por Soph ♥</p>
     </footer>
 
-    <script src="He4rtLabs.js"></script>
+    <script src="heart.js"></script>
 </body>
 
 </html>
