styles: alterei a largura maxima da calc-free

--- a/pags/calculadora/calculadora.html
+++ b/pags/calculadora/calculadora.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Valor Hora - He4rtLabs</title>
+    <title>Calculadora Freelancer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="calculadora.css">
@@ -23,8 +23,13 @@
 
     <div class="container-fluid py-5">
         <div class="row justify-content-center">
+            <!--
+            Versao com o maximo mais largo
             <div class="col-11 col-sm-10 col-md-10 col-lg-8 col-xl-6 text-center p-0">
-                <div class="card px-0 pt-4 pb-0">
+            -->
+            <div class="col-11 col-sm-9 col-md-8 col-lg-6 col-xl-4 text-center p-0">
+    
+            <div class="card px-0 pt-4 pb-0">
                     <h2 id="heading">Calculadora de Valor Hora</h2>
                     <p>Preencha todas as etapas para calcular seu valor hora ideal</p>
 
