--- a/pags/calculadora/calculadora.html
+++ b/pags/calculadora/calculadora.html
@@ -2,46 +2,52 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Freelancer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="calculadora.css">
-    <link rel="stylesheet" href="../../assets/global.css">
+    <!-- Configurações básicas do documento -->
+    <meta charset="UTF-8"> <!-- Define a codificação de caracteres como UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura viewport para responsividade -->
+    <title>Calculadora Freelancer</title> <!-- Título da página exibido na aba do navegador -->
+    
+    <!-- Links para folhas de estilo externas -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- Font Awesome para ícones -->
+    <link rel="stylesheet" href="calculadora.css"> <!-- Folha de estilo específica da calculadora -->
+    <link rel="stylesheet" href="../../assets/global.css"> <!-- Folha de estilo global do projeto -->
 </head>
 
 <body>
+    <!-- Cabeçalho da página -->
     <header>
-        <h1>Calculadora de Hora para Freelas</h1>
-        <nav class="nav-links">
-            <a href="../../pags/calculadora/calculadora.html">Calculadora</a>
-            <a href="../../pags/heart/heart.html">Desafio He4rtLabs</a>
-            <a href="../../pags/agenda/agenda.html">Agenda(em manutenção!)</a>
+        <h1>Calculadora de Hora para Freelas</h1> <!-- Título principal -->
+        <nav class="nav-links"> <!-- Barra de navegação -->
+            <a href="../../pags/calculadora/calculadora.html">Calculadora</a> <!-- Link para a página da calculadora -->
+            <a href="../../pags/heart/heart.html">Desafio He4rtLabs</a> <!-- Link para outra página -->
+            <a href="../../pags/agenda/agenda.html">Agenda(em manutenção!)</a> <!-- Link para página em manutenção -->
         </nav>
     </header>
 
-    <div class="container-fluid py-5">
-        <div class="row justify-content-center">
-            <!--
-            Versao com o maximo mais largo
-            <div class="col-11 col-sm-10 col-md-10 col-lg-8 col-xl-6 text-center p-0">
-            -->
+    <!-- Container principal da calculadora -->
+    <div class="container-fluid py-5"> <!-- Container fluido do Bootstrap com padding vertical -->
+        <div class="row justify-content-center"> <!-- Linha centralizada -->
+            <!-- Coluna responsiva que define a largura máxima em diferentes breakpoints -->
             <div class="col-11 col-sm-9 col-md-8 col-lg-6 col-xl-4 text-center p-0">
     
-            <div class="card px-0 pt-4 pb-0">
+                <!-- Card principal que contém todo o formulário -->
+                <div class="card px-0 pt-4 pb-0">
+                    <!-- Título e descrição da calculadora -->
                     <h2 id="heading">Calculadora de Valor Hora</h2>
                     <p>Preencha todas as etapas para calcular seu valor hora ideal</p>
 
+                    <!-- Formulário principal com todas as etapas -->
                     <form id="calculator-form">
-                        <!-- Barra de progresso -->
+                        <!-- Barra de progresso com etapas -->
                         <ul id="progressbar">
-                            <li class="active" id="step1"><strong>Renda</strong></li>
-                            <li id="step2"><strong>Custos</strong></li>
-                            <li id="step3"><strong>Projeto</strong></li>
-                            <li id="step4"><strong>Resultado</strong></li>
+                            <li class="active" id="step1"><strong>Renda</strong></li> <!-- Etapa 1 - ativa inicialmente -->
+                            <li id="step2"><strong>Custos</strong></li> <!-- Etapa 2 -->
+                            <li id="step3"><strong>Projeto</strong></li> <!-- Etapa 3 -->
+                            <li id="step4"><strong>Resultado</strong></li> <!-- Etapa 4 -->
                         </ul>
 
+                        <!-- Barra de progresso linear animada -->
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
                                 style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -50,38 +56,43 @@
                         <!-- Etapa 1: Informações de Renda -->
                         <fieldset>
                             <div class="fieldset-content">
-                                <div class="row">
+                                <div class="row"> <!-- Cabeçalho da etapa -->
                                     <div class="col-7">
-                                        <h2 class="fs-title">Informações de Renda</h2>
+                                        <h2 class="fs-title">Informações de Renda</h2> <!-- Título da etapa -->
                                     </div>
                                     <div class="col-5">
-                                        <h2 class="steps">Passo 1 de 4</h2>
+                                        <h2 class="steps">Passo 1 de 4</h2> <!-- Indicador de progresso -->
                                     </div>
                                 </div>
 
+                                <!-- Campo para salário desejado -->
                                 <div class="form-group">
                                     <label for="desired-salary">Salário líquido desejado (R$)</label>
                                     <input type="number" id="desired-salary" class="form-control" required min="1"
-                                        step="0.01">
+                                        step="0.01"> <!-- Aceita valores decimais -->
                                 </div>
 
+                                <!-- Campo para horas trabalhadas por dia -->
                                 <div class="form-group">
                                     <label for="daily-hours">Horas trabalhadas por dia</label>
                                     <input type="number" id="daily-hours" class="form-control" required min="1"
-                                        max="24">
+                                        max="24"> <!-- Limite de 24 horas -->
                                 </div>
 
+                                <!-- Campo para dias trabalhados por semana -->
                                 <div class="form-group">
                                     <label for="work-days">Dias trabalhados por semana</label>
-                                    <input type="number" id="work-days" class="form-control" required min="1" max="7">
+                                    <input type="number" id="work-days" class="form-control" required min="1" max="7"> <!-- Limite de 7 dias -->
                                 </div>
 
+                                <!-- Campo para dias de férias por ano -->
                                 <div class="form-group">
                                     <label for="vacation-days">Dias de férias por ano</label>
                                     <input type="number" id="vacation-days" class="form-control" required min="0"
-                                        max="365">
+                                        max="365"> <!-- Limite de 365 dias -->
                                 </div>
                             </div>
+                            <!-- Botão para avançar para próxima etapa -->
                             <input type="button" name="next" class="next action-button" value="Próximo" />
                         </fieldset>
 
@@ -90,30 +101,35 @@
                             <div class="fieldset-content">
                                 <div class="row">
                                     <div class="col-7">
-                                        <h2 class="fs-title">Custos do Trabalho</h2>
+                                        <h2 class="fs-title">Custos do Trabalho</h2> <!-- Título da etapa -->
                                     </div>
                                     <div class="col-5">
-                                        <h2 class="steps">Passo 2 de 4</h2>
+                                        <h2 class="steps">Passo 2 de 4</h2> <!-- Indicador de progresso -->
                                     </div>
                                 </div>
 
+                                <!-- Container onde os custos adicionados serão exibidos -->
                                 <div id="costs-container">
-                                    <!-- Custos serão adicionados aqui dinamicamente -->
+                                    <!-- Custos serão adicionados aqui dinamicamente via JavaScript -->
                                 </div>
 
+                                <!-- Formulário para adicionar novos custos -->
                                 <div class="mb-4">
                                     <h4>Adicionar Novo Custo</h4>
+                                    <!-- Campo para descrição do custo -->
                                     <div class="form-group">
                                         <label for="cost-description">Descrição</label>
                                         <input type="text" id="cost-description" class="form-control"
                                             placeholder="Ex: Internet, Aluguel...">
                                     </div>
 
+                                    <!-- Campo para valor do custo -->
                                     <div class="form-group">
                                         <label for="cost-value">Valor (R$)</label>
-                                        <input type="number" id="cost-value" class="form-control" step="0.01" min="0">
+                                        <input type="number" id="cost-value" class="form-control" step="0.01" min="0"> <!-- Aceita valores decimais -->
                                     </div>
 
+                                    <!-- Seletor para tipo de custo -->
                                     <div class="form-group">
                                         <label for="cost-type">Tipo</label>
                                         <select id="cost-type" class="form-control">
@@ -122,10 +138,12 @@
                                         </select>
                                     </div>
 
+                                    <!-- Botão para adicionar custo -->
                                     <button type="button" class="btn btn-secondary" id="add-cost">Adicionar
                                         Custo</button>
                                 </div>
                             </div>
+                            <!-- Botões de navegação entre etapas -->
                             <input type="button" name="previous" class="previous action-button-previous"
                                 value="Anterior" />
                             <input type="button" name="next" class="next action-button" value="Próximo" />
@@ -136,29 +154,33 @@
                             <div class="fieldset-content">
                                 <div class="row">
                                     <div class="col-7">
-                                        <h2 class="fs-title">Cálculo do Projeto</h2>
+                                        <h2 class="fs-title">Cálculo do Projeto</h2> <!-- Título da etapa -->
                                     </div>
                                     <div class="col-5">
-                                        <h2 class="steps">Passo 3 de 4</h2>
+                                        <h2 class="steps">Passo 3 de 4</h2> <!-- Indicador de progresso -->
                                     </div>
                                 </div>
 
+                                <!-- Exibição do valor hora calculado -->
                                 <div class="result-box">
                                     <p>Seu valor hora calculado é:</p>
-                                    <div class="result-value" id="hour-value-preview">R$ 0,00</div>
+                                    <div class="result-value" id="hour-value-preview">R$ 0,00</div> <!-- Valor será atualizado via JS -->
                                 </div>
 
+                                <!-- Campo para horas diárias no projeto -->
                                 <div class="form-group">
                                     <label for="project-daily-hours">Horas trabalhadas por dia no projeto</label>
                                     <input type="number" id="project-daily-hours" class="form-control" min="1" max="24"
-                                        value="8">
+                                        value="8"> <!-- Valor padrão de 8 horas -->
                                 </div>
 
+                                <!-- Campo para dias dedicados ao projeto -->
                                 <div class="form-group">
                                     <label for="project-days">Dias dedicados ao projeto</label>
-                                    <input type="number" id="project-days" class="form-control" min="1">
+                                    <input type="number" id="project-days" class="form-control" min="1"> <!-- Mínimo 1 dia -->
                                 </div>
                             </div>
+                            <!-- Botões de navegação entre etapas -->
                             <input type="button" name="previous" class="previous action-button-previous"
                                 value="Anterior" />
                             <input type="button" name="next" class="next action-button" value="Próximo" />
@@ -169,30 +191,33 @@
                             <div class="fieldset-content">
                                 <div class="row">
                                     <div class="col-7">
-                                        <h2 class="fs-title">Resultado Final</h2>
+                                        <h2 class="fs-title">Resultado Final</h2> <!-- Título da etapa -->
                                     </div>
                                     <div class="col-5">
-                                        <h2 class="steps">Passo 4 de 4</h2>
+                                        <h2 class="steps">Passo 4 de 4</h2> <!-- Indicador de progresso -->
                                     </div>
                                 </div>
 
+                                <!-- Container de resultados -->
                                 <div class="result-box">
                                     <h3 class="purple-text">Valor do Projeto</h3>
-                                    <div class="result-value" id="project-value-result">R$ 0,00</div>
+                                    <div class="result-value" id="project-value-result">R$ 0,00</div> <!-- Valor será atualizado via JS -->
                                     <p>Baseado no seu valor hora:</p>
-                                    <div class="result-value" id="final-hour-value">R$ 0,00</div>
+                                    <div class="result-value" id="final-hour-value">R$ 0,00</div> <!-- Valor será atualizado via JS -->
 
+                                    <!-- Seção de resumo de custos -->
                                     <div class="mt-4">
                                         <h4>Resumo dos Custos</h4>
                                         <div id="costs-summary">
-                                            <!-- Resumo dos custos será exibido aqui -->
+                                            <!-- Resumo dos custos será exibido aqui dinamicamente via JS -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <!-- Botões de navegação -->
                             <input type="button" name="previous" class="previous action-button-previous"
                                 value="Anterior" />
-                            <button type="button" class="action-button" id="recalculate">Recalcular</button>
+                            <button type="button" class="action-button" id="recalculate">Recalcular</button> <!-- Botão para reiniciar o cálculo -->
                         </fieldset>
                     </form>
                 </div>
@@ -200,13 +225,15 @@
         </div>
     </div>
 
+    <!-- Rodapé da página -->
     <footer>
-        <p>&copy; 2025 - Criado por Soph ♥</p>
+        <p>&copy; 2025 - Criado por Soph ♥</p> <!-- Créditos e ano -->
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="calculadora.js"></script>
+    <!-- Scripts JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- jQuery -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS -->
+    <script src="calculadora.js"></script> <!-- Script específico da calculadora -->
 </body>
 
 </html>
