--- a/pags/agenda/agenda.html
+++ b/pags/agenda/agenda.html
@@ -1,94 +1,152 @@
 <!DOCTYPE html>
+<!-- Declaração do tipo de documento HTML5 -->
 <html lang="pt-BR">
+<!-- Define o idioma da página como português do Brasil -->
 
 <head>
+    <!-- Cabeçalho do documento - contém metadados e links para recursos externos -->
     <meta charset="UTF-8">
+    <!-- Define o encoding de caracteres como UTF-8 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Configura a viewport para responsividade em dispositivos móveis -->
     <title>Controle de Freelas - Calendário</title>
+    <!-- Título da página que aparece na aba do navegador -->
     <link rel="stylesheet" href="agenda.css">
+    <!-- Link para o arquivo CSS específico desta página -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Importa a fonte Inter do Google Fonts -->
     <link rel="stylesheet" href="../../assets/global.css">
+    <!-- Link para o arquivo CSS global -->
 </head>
 
 <body>
+    <!-- Corpo do documento - conteúdo visível da página -->
     <header>
+        <!-- Cabeçalho da página -->
         <h1>Calculadora de Hora para Freelas</h1>
+        <!-- Título principal -->
         <nav class="nav-links">
+            <!-- Barra de navegação -->
             <a href="../../pags/calculadora/calculadora.html">Calculadora</a>
+            <!-- Link para a página da calculadora -->
             <a href="../../pags/heart/heart.html">Desafio He4rtLabs</a>
+            <!-- Link para a página do desafio -->
             <a href="../../pags/agenda/agenda.html">Agenda(em manutenção!)</a>
+            <!-- Link para a página de agenda (em manutenção) -->
         </nav>
     </header>
 
     <main>
         <!-- Seção de Adicionar Projeto -->
         <section class="project-input">
+            <!-- Seção para adicionar novos projetos -->
             <h2>Meus Projetos</h2>
+            <!-- Título da seção -->
             <div class="input-group">
+                <!-- Grupo de inputs -->
                 <input type="text" id="project-name" placeholder="Nome do projeto">
+                <!-- Input para nome do projeto -->
                 <button id="add-project">Adicionar</button>
+                <!-- Botão para adicionar projeto -->
             </div>
             <div id="projects-list"></div>
+            <!-- Container onde a lista de projetos será renderizada -->
         </section>
 
-        <!-- Calendário -->
+        <!-- Seção do Calendário -->
         <section class="calendar-container">
+            <!-- Container principal do calendário -->
             <div class="calendar-header">
+                <!-- Cabeçalho do calendário (controles de navegação) -->
                 <button id="prev-month">◀</button>
+                <!-- Botão para mês anterior -->
                 <h2 id="current-month">Mês Atual</h2>
+                <!-- Exibição do mês/ano atual -->
                 <button id="next-month">▶</button>
+                <!-- Botão para próximo mês -->
             </div>
             <div id="calendar-grid"></div>
+            <!-- Grade onde os dias do calendário serão renderizados -->
         </section>
 
-        <!-- Modal de Registro de Horas -->
+        <!-- Modal de Registro de Horas (inicialmente oculto) -->
         <div id="time-modal" class="modal hidden">
+            <!-- Modal para registrar horas trabalhadas -->
             <div class="modal-content">
+                <!-- Conteúdo do modal -->
                 <span class="close-modal">&times;</span>
+                <!-- Botão para fechar o modal -->
                 <h3>Registrar Horas</h3>
+                <!-- Título do modal -->
                 <form id="time-form">
+                    <!-- Formulário para registro de horas -->
                     <div class="form-group">
+                        <!-- Grupo do campo de seleção de projeto -->
                         <label for="selected-project">Projeto:</label>
+                        <!-- Label do select -->
                         <select id="selected-project" required>
+                            <!-- Select para escolher o projeto -->
                             <option value="">Selecione um projeto</option>
+                            <!-- Opção padrão -->
                         </select>
                     </div>
                     <div class="form-group">
+                        <!-- Grupo do campo de horas trabalhadas -->
                         <label for="hours-worked">Horas trabalhadas:</label>
+                        <!-- Label do input -->
                         <input type="number" id="hours-worked" min="0.5" max="24" step="0.5" value="8" required>
+                        <!-- Input para horas (com validações) -->
                     </div>
                     <div class="form-group">
+                        <!-- Grupo do campo de descrição -->
                         <label for="work-description">Descrição (opcional):</label>
+                        <!-- Label da textarea -->
                         <textarea id="work-description" rows="3"></textarea>
+                        <!-- Textarea para descrição -->
                     </div>
                     <button type="submit">Salvar</button>
+                    <!-- Botão para submeter o formulário -->
                 </form>
             </div>
         </div>
 
-        <!-- Modal de Cálculo -->
+        <!-- Modal de Cálculo (inicialmente oculto) -->
         <div id="calc-modal" class="modal hidden">
+            <!-- Modal para cálculos de valores -->
             <div class="modal-content">
+                <!-- Conteúdo do modal -->
                 <span class="close-modal">&times;</span>
+                <!-- Botão para fechar o modal -->
                 <h3>Calcular Valores</h3>
+                <!-- Título do modal -->
                 <div class="calc-options">
+                    <!-- Opções de cálculo disponíveis -->
                     <p>O que você deseja calcular?</p>
+                    <!-- Texto descritivo -->
                     <button id="calc-hour-value" class="calc-btn">Valor da minha hora</button>
+                    <!-- Botão para calcular valor hora -->
                     <button id="calc-project-value" class="calc-btn">Valor total do projeto</button>
+                    <!-- Botão para calcular valor projeto -->
                 </div>
                 <div id="calc-result" class="hidden">
+                    <!-- Container do resultado (inicialmente oculto) -->
                     <h4>Resultado:</h4>
+                    <!-- Título do resultado -->
                     <p id="result-text"></p>
+                    <!-- Texto onde o resultado será exibido -->
                 </div>
             </div>
         </div>
     </main>
 
     <footer>
+        <!-- Rodapé da página -->
         <p>&copy; 2025 - Criado por Soph ♥</p>
+        <!-- Créditos e copyright -->
     </footer>
 
     <script src="agenda.js"></script>
+    <!-- Link para o arquivo JavaScript da página -->
 </body>
 
 </html>
