styles: header teste

--- a/pags/calculadora/calculadora.html
+++ b/pags/calculadora/calculadora.html
@@ -25,7 +25,7 @@
     <div class="cursor2"></div>
     <!-- Cabeçalho da página -->
     <header>
-        <h1>Calculadora de Hora para Freelas</h1> <!-- Título principal -->
+        <h1>Calculadora de Hora para Freelancer</h1> <!-- Título principal -->
         <nav class="nav-links"> <!-- Barra de navegação -->
             <a href="../../pags/calculadora/calculadora.html">Calculadora</a> <!-- Link para a página da calculadora -->
             <a href="../../pags/heart/heart.html">Desafio He4rtLabs</a> <!-- Link para outra página -->
