fix: diagnostico final

--- a/calculadora.html
+++ b/calculadora.html
@@ -17,10 +17,12 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h1>Consultor de Precificação Freelancer</h1>
-        <nav class="nav-links">
-            <a href="calculadora.html">Calculadora</a>
-            <a href="contrato.html">Gerador de Contrato</a>
+        <nav>
+            <div class="logo">Consultor de Precificação Freelancer</div>
+            <ul class="nav-links">
+                <li><a href="calculadora.html">Calculadora</a></li>
+                <li><a href="contrato.html">Gerador de Contrato</a></li>
+            </ul>
         </nav>
     </header>
 
