--- a/contrato.html
+++ b/contrato.html
@@ -12,12 +12,15 @@
 </head>
 <body>
     <header>
-        <h1>Consultor de Precificação Freelancer</h1>
-        <nav class="nav-links">
-            <a href="calculadora.html">Calculadora</a>
-            <a href="contrato.html">Gerador de Contrato</a>
+        <nav>
+            <div class="logo">Consultor de Precificação Freelancer</div>
+            <ul class="nav-links">
+                <li><a href="calculadora.html">Calculadora</a></li>
+                <li><a href="contrato.html">Gerador de Contrato</a></li>
+            </ul>
         </nav>
     </header>
+    
 
     <div class="container my-5">
         <div class="row">
