--- a/contrato.html
+++ b/contrato.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="logo">Consultor de Precificação Freelancer</div>
             <ul class="nav-links">
-                <li><a href="calculadora.html">Calculadora</a></li>
+                <li><a href="index.html">Calculadora</a></li>
                 <li><a href="contrato.html">Gerador de Contrato</a></li>
             </ul>
             <div class="theme-switcher">
@@ -160,7 +160,7 @@
      <footer>
         <div class="container footer-content">
             <div class="footer-logo">Consultor de Precificação Freelancer</div>
-            <div class="footer-nav"><a href="calculadora.html">Calculadora</a><a href="contrato.html">Gerador de Contrato</a></div>
+            <div class="footer-nav"><a href="index.html">Calculadora</a><a href="index.html">Gerador de Contrato</a></div>
             <div class="footer-social">
                  <a href="https://instagram.com/guaphia" target="_blank" title="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
                 <a href="https://linkedin.com/in/sophia-picasky-alberton" target="_blank" title="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
