styles: cores de texto gerais

--- a/index.html
+++ b/index.html
@@ -62,38 +62,38 @@
                                 <h4 class="section-title">Sua Remuneração Mensal</h4>
                                 <div class="form-group">
                                     <label for="salario-desejado">Salário Líquido Desejado (R$)</label>
-                                    <input type="number" id="salario-desejado" class="form-control" min="1" step="100" placeholder="3000">
+                                    <input type="number" id="salario-desejado" class="form-control" min="1" step="100" placeholder="ex: 3000">
                                     <span class="error-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="beneficios-mensais">Outros Benefícios (Plano de Saúde, etc.) (R$)</label>
-                                    <input type="number" id="beneficios-mensais" class="form-control" min="0" step="50" placeholder="0">
+                                    <input type="number" id="beneficios-mensais" class="form-control" min="0" step="50" placeholder="ex: 0">
                                 </div>
 
                                 <h4 class="section-title">Seus Custos Operacionais Mensais</h4>
                                 <div class="form-group">
                                     <label for="custos-fixos">Custos Fixos (Internet, Software, etc.) (R$)</label>
-                                    <input type="number" id="custos-fixos" class="form-control" min="0" step="50" placeholder="300">
+                                    <input type="number" id="custos-fixos" class="form-control" min="0" step="50" placeholder="ex: 300">
                                 </div>
                                 <div class="form-group">
                                     <label for="impostos-percentual">Alíquota de Impostos (%)</label>
-                                    <input type="number" id="impostos-percentual" class="form-control" min="0" max="100" placeholder="6">
+                                    <input type="number" id="impostos-percentual" class="form-control" min="0" max="100" placeholder="ex: 6">
                                 </div>
                                 
                                 <h4 class="section-title">Sua Jornada de Trabalho</h4>
                                 <div class="form-group">
                                     <label for="horas-diarias">Horas de trabalho por dia</label>
-                                    <input type="number" id="horas-diarias" class="form-control" min="1" max="24" placeholder="8">
+                                    <input type="number" id="horas-diarias" class="form-control" min="1" max="24" placeholder="ex: 8">
                                     <span class="error-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="dias-trabalho">Dias de trabalho por semana</label>
-                                    <input type="number" id="dias-trabalho" class="form-control" min="1" max="7" placeholder="5">
+                                    <input type="number" id="dias-trabalho" class="form-control" min="1" max="7" placeholder="ex: 5">
                                     <span class="error-message"></span>
                                 </div>
                                 <div class="form-group">
                                     <label for="dias-ferias">Dias de férias por ano</label>
-                                    <input type="number" id="dias-ferias" class="form-control" min="0" max="365" placeholder="30">
+                                    <input type="number" id="dias-ferias" class="form-control" min="0" max="365" placeholder="ex: 30">
                                     <span class="error-message"></span>
                                 </div>
                             </div>
